# android-webcam

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.pt-br.md  build-arch.sh  build-debian.sh  build.sh
arch-configs/: PKGBUILD
debian-configs/: postinst  v4l2loopback.conf
resources/: android-webcam.desktop
src/: main.rs
