[package]
name = "android-webcam"
version = "1.0.1"
authors = ["Broly <jack_sparrow_xv@proton.me>"]
edition = "2021"
description = "Use Android device as a webcam via scrcpy and v4l2loopback"
license = "GPL-3.0-or-later"

[dependencies]
gtk4 = "0.7.3"

[package.metadata.deb]
maintainer = "Broly <jack_sparrow_xv@proton.me>"
copyright = "2026, Broly"
depends = "adb, scrcpy, v4l2loopback-dkms, v4l2loopback-utils, libgtk-4-1"
section = "utils"
priority = "optional"
revision = "2"
maintainer-scripts = "debian-configs/"
assets = [
    ["target/release/android-webcam", "/usr/bin/android-webcam", "755"],
    ["resources/android-webcam.desktop", "/usr/share/applications/", "644"],
    ["debian-configs/modules.conf", "/etc/modules-load.d/android-webcam.conf", "644"],
    ["debian-configs/v4l2loopback.conf", "/etc/modprobe.d/android-webcam.conf", "644"],
    ["resources/android-webcam.png", "/usr/share/icons/hicolor/256x256/apps/android-webcam.png", "644"],
]
